--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   },
   "dependencies": {
     "astro": "^2.4.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.8",
+    "prettier-plugin-astro": "^0.8.0"
   }
 }
