--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astro-community/astro-embed-youtube": "^0.2.2",
     "@astrojs/preact": "^2.1.0",
     "astro": "^2.4.1",
+    "open-graph-scraper": "^6.0.1",
     "preact": "^10.14.1"
   },
   "devDependencies": {
